fix layout bug

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,11 +4,8 @@
 
 html,
 body {
-   @apply h-full w-full font-inter text-white
-   overflow-x-hidden bg-main;
-}
-body._lock-scroll {
-   @apply overflow-hidden;
+   @apply h-full w-full font-inter text-white bg-main
+   overflow-x-hidden;
 }
 .wrapper {
    @apply flex flex-col h-full w-full;
